[gd_scene load_steps=5 format=2]

[ext_resource path="res://unit.gd" type="Script" id=1]
[ext_resource path="res://assets/pistol.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 5.0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 94.2019

[node name="unit" type="KinematicBody2D" index="0"]

position = Vector2( 432, 269 )
input_pickable = false
collision_layer = 0
collision_mask = 0
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
enemy_path = NodePath("Path2D/enemy 1")

[node name="Sprite" type="Sprite" parent="." index="0"]

rotation = 3.14159
texture = ExtResource( 2 )
vframes = 2
_sections_unfolded = [ "Animation", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="shootingRange" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shootingRange" index="0"]

position = Vector2( 8, -8 )
shape = SubResource( 2 )

[node name="shootingRange2" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shootingRange2" index="0"]

position = Vector2( 8, -8 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="body_entered" from="shootingRange" to="." method="_on_shootingRange_body_entered"]

[connection signal="body_entered" from="shootingRange2" to="." method="_on_shootingRange_body_entered"]

[connection signal="body_exited" from="shootingRange2" to="." method="_on_shootingRange2_body_exited"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


